--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
+    - name: Version strings
+      id: version
+      run: |
+        echo "::set-output name=RELEASE_TIME::$(date +"%y-%m-%d-%H-%M")"         
+
     - name: Publish to Docker Repository (latest)
-      pre: echo ::save-state name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
       uses: elgohr/Publish-Docker-Github-Action@v4
       with:
         name: prismaticd/prefect-base:latest
         dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
+        tags: "latest,${{ env.| }}"
