--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       # Only commits to master trigger build
-      - master
+      - main
     paths-ignore:
       # Don't trigger build on README.md change
       - 'README.md'
